--- a/src/main/frontend/src/index.css
+++ b/src/main/frontend/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("C:\Users\djskw\MyBlog\MyBlog\src\main\resources\static\back.jpg");
 }
 
 code {
