--- a/src/main/frontend/src/LoginTemplate.scss
+++ b/src/main/frontend/src/LoginTemplate.scss
@@ -9,7 +9,7 @@
         align-items: center;
         justify-content: center;
         margin-top: 5%;
-        border: 2px solid black;
+        
         margin-left: 30%;
         margin-right: 30%;
         height: 450px;
@@ -21,14 +21,21 @@
 
         input{
             
-            margin-top: 0px; 
+            margin-top: 0px;
+            margin-bottom: 1px; 
             padding-top: 0px;
             height: 50px;
             border-radius: 25px;
             outline: none;
+            border: none;
         }
 
         #btt_login{
+            width: 170px;
+            background-color: white;
+            cursor: pointer;
+        }
+        #btt_reg{
             width: 170px;
             background-color: white;
             cursor: pointer;
